# SolKey

./: .dockerignore  .env.local  .gitignore  Anchor.toml  Dockerfile  README.md  docker-compose.yml  mongo-init.js  mongodb-keyfile  package-lock.json  package.json  pnpm-lock.yaml
.next/: trace
backend/: .gitignore  index.js  package-lock.json  package.json  schema.sql  test-bs58.js  tsconfig.json
backend/db/: projects.js
backend/lib/: crypto.js  supabase.js
backend/routes/: projects.js  secrets.js  users.js
backend/src/: index.ts  openai.ts  tools.ts
frontend/: .dockerignore  .gitignore  .npmrc  Dockerfile  check-exports.js  docker-compose.yml  mongodb-keyfile  next.config.js  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.ts
frontend/app/: globals.css  layout-document.tsx  layout.tsx  page.tsx
frontend/components/: CryptoTestComponent.tsx  PermissionProgramTester.tsx  activity-log.tsx  ai-assistant.tsx  anchor-provider.tsx  billing-plans.tsx  (+58 more)
mock-encryption/: .gitignore  package.json
mock-frontend/: Dockerfile  package.json  vite.config.ts
programs/permission_program/: Cargo.toml
programs/permission_program/src/: accounts.rs  error.rs  instructions.rs  lib.rs  program_accounts.rs  state.rs
scripts/: generate-keyfile.sh
solkey-backend/: .dockerignore  .env.example  .env.test  .gitignore  Dockerfile  Dockerfile.mongodb  README.md  docker-compose.yml  init-mongo.sh  init-replicaset.js  jest.config.js  jest.integration.config.js  mongo-init.js  mongodb-init.sh  package-lock.json  package.json
(+118 files in other folders)
